# Re-ID

./: CLAUDE.md  README.md  association_develop.md
reid/: ARCHITECTURE.md  CMakeLists.txt  README.md  example_usage.cpp
reid/config/: reid_config.json
reid/include/: GlobalAssociation.h  ReIDPipeline.h  ReIDPreprocessor.h  ReIDResourceManager.h  ReIDTypes.h  ReIDWorkerPool.h  ReIdConditioner.h  ReIdConfigLoader.h  ReIdEngine.h  ReIdManager.h  ReIdTensorProps.h  ReIdWorker.h  ThreadSafeQueue.h
reid/src/: GlobalAssociation.cpp  ReIDPipeline.cpp  ReIDPreprocessor.cpp  ReIDResourceManager.cpp  ReIDWorkerPool.cpp  ReIdConditioner.cpp  ReIdConfigLoader.cpp  ReIdEngine.cpp  ReIdManager.cpp  ReIdWorker.cpp
